--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
+title:               gdcs92
+tagline:             webpage
